--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
 # Django settings
 SECRET_KEY=SOME_SECRET_KEY
-DEBUG=0
-DJANGO_SETTINGS_MODULE=path.to.settings
+DEBUG=1
+DJANGO_SETTINGS_MODULE=core.settings.develop
 
 # Database settings
-DB_ENGINE=DB_ENGINE
+DB_ENGINE=django.db.backends.postgresql
 DB_NAME=DB_NAME
-DB_USER=DB_USER
-DB_PASSWORD=DB_PASSWORD
-DB_HOST=DB_HOST
-DB_PORT=DB_PORT
+DB_USER=postgresql
+DB_PASSWORD=postgresql
+DB_HOST=localhost
+DB_PORT=5432
+
 
 # redis and celery settings
 REDIS_URL=redis://localhost:6379/0
