--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DB_USER=postgresql
 DB_PASSWORD=postgresql
 DB_HOST=localhost
 DB_PORT=5432
-
+DATABASE=postgres
 
 # redis and celery settings
 REDIS_URL=redis://localhost:6379/0
